<resources>
    <string name="app_name">UI Showcase App</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="page1">Page 1 - EN</string>
    <string name="page2">Page 2 - EN</string>
    <string name="page3">Page 3 - EN</string>
    <string name="page4">Page 4 - EN</string>
    <string name="change_language">French</string>

    <string name="page1_title">EN: LinearLayout Demo</string>
    <string name="page1_label">Enter Any Text:</string>
    <string name="page1_button_text">Click me</string>
    <string name="page1_img_description">show da xuxa</string>

    <string name="page2_floating_icon">Add floating Icon</string>
    <string name="page2_toggle_on">On</string>
    <string name="page2_toggle_off">Off</string>

    <string name="page3_sample_label">sample_label</string>

    <string-array name="grid_item_labels">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string name="page4_item_placeholder">item placeholder</string>
</resources>