<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page1"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <!--title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/page1_title"
        android:text="@string/page1_title"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp"/>

    <!--label + input field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/page1_label_user_input"
            android:labelFor="@id/page1_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page1_label"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/page1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <!--button-->
    <Button
        android:id="@+id/page1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page1_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

</LinearLayout>
