<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/page2"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toggle_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Label for "Off" -->
        <TextView
            android:id="@+id/label_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page2_toggle_off"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Switch -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/page2_toggle_off"
            android:textOn="@string/page2_toggle_on"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            app:layout_constraintStart_toEndOf="@id/label_off"
            app:layout_constraintEnd_toStartOf="@id/label_on"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Label for "On" -->
        <TextView
            android:id="@+id/label_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page2_toggle_on"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:max="100"
        android:progressTint="@color/progress_color"
        app:layout_constraintTop_toBottomOf="@id/toggle_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/page2_floating_icon"
        android:src="@drawable/baseline_add_circle_24"
        android:tint="@android:color/white"
        app:backgroundTint="@color/fab_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
